# babble-web

./: .gitignore  .gitmodules  README.md  index.html  package-lock.json  package.json  udp_listener.py  vite.config.js
.github/workflows/: build-windows.yml  deploy.yml
public/: model.onnx
src/: babble-model.js  config-store.js  main.js  one-euro-filter.js  osc-client.js  serial-camera.js  style.css  tauri-serial-camera.js  webcam-camera.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  udp.rs
